--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 </ul>
                 <h6>To change it, go to Chrome>Extensions>&#9776;>Keyboard Shortcuts.
                     <br> After you changed keyboard shortcuts, you may need to restart your browser.
-                    <br> For start use the extension, open tab with Yandex music and enable your track. Do not close the tab! Ready!
+                    <br> To start using the extension, open tab with Yandex music and enable your track. Do not close the tab! Done!
                     <br>
                 </h6>
                 <h6>Any questions, please write to:
