--- a/about.html
+++ b/about.html
@@ -30,8 +30,9 @@
                     <li>Pause track (Ctrl+Shift+8)</li>
                     <li>Previous track (Ctrl+Shift+7)</li>
                 </ul>
-                <h6>To change it, go to Chrome>Extensions>&#9776;>Keyboard Shortcuts.
+                <h6 id="shortcuts">To change it, go to Chrome>Extensions>&#9776;>Keyboard Shortcuts.
                     <br> After you changed keyboard shortcuts, you may need to restart your browser.
+                    <br>
                     <br> To start using the extension, open tab with Yandex music and enable your track. Do not close the tab! Done!
                     <br>
                 </h6>
