--- a/about.html
+++ b/about.html
@@ -12,28 +12,30 @@
 <body class="body-about">
     <div class="content-main">
         <div class="icon"></div>
-        <h1 class="title-about title">Yandex Music Control!</h1>
+        <h1 class="title-about title">Yandex Music Control</h1>
         <div class="content-about">
-            <div class="about">App to control Yandex music from any tabs, windows or apps! <br> The app allows to:
+            <div class="about">App to control Yandex music from any tabs, windows or apps!
+                <br> To start using the extension, open a tab with Yandex music and enable your track.
+                <br> Do not close the tab! Enjoy!
                 <br>
+                <h1 id="headAllows" class="title-about title">The app allows to:</h1>
                 <ul>
-                    <li>Togle a track.</li>
-                    <li>Add or remove track from your favorites.</li>
+                    <li>Toggle a track.</li>
+                    <li>Add or remove a track from your favorites.</li>
                     <li>Use keyboard keys.</li>
                     <li>View and open a cover of any track.</li>
                     <li>You can use buttons of this extension or your keyboard.</li>
                     <li>When you use your keyboard to control, you can see a track's name in notifictions.</li>
                 </ul>
-                Default keyboard shortcuts:
+                <h1 id="headAllows" class="title-about title">Default keyboard shortcuts:</h1>
                 <ul class="ul">
                     <li>Next track (Ctrl+Shift+9)</li>
                     <li>Pause track (Ctrl+Shift+8)</li>
                     <li>Previous track (Ctrl+Shift+7)</li>
                 </ul>
-                <h6 id="shortcuts">To change it, go to Chrome>Extensions>&#9776;>Keyboard Shortcuts.
-                    <br> After you changed keyboard shortcuts, you may need to restart your browser.
+                <h6 id="shortcuts">To set your own keyboard shortcuts, go to Chrome>Extensions>&#9776;>Keyboard Shortcuts.
+                    <br> After changing the settings, you may need to restart your browser.
                     <br>
-                    <br> To start using the extension, open tab with Yandex music and enable your track. Do not close the tab! Done!
                     <br>
                 </h6>
                 <h6>Any questions, please write to:
@@ -50,13 +52,11 @@
                         <span class="donationalerts-title">Donation Alerts</span>
                     </div>
                 </div>
-                <!-- <div class="support btn-web">Developer website</div> -->
-
             </div>
         </div>
 
     </div>
-    <script src="about.js"></script>
+    <script src="js/about.js"></script>
 </body>
 
 </html>
