--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="popup.js"></script>
+    <script src="js/popup.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
 
@@ -20,7 +20,6 @@
     <div class="modal-side">
         <div class="content-menu slide-out">
             <div class="title title-menu ">Control Yandex Music</div>
-            <!-- <div title="Go to the developer website" class="side ">Home</div> -->
             <div class="side ">About</div>
             <div id="contactMe" class="side ">Contact Me</div>
             <div class="side ">Open keyboard shortcuts</div>
@@ -37,7 +36,7 @@
             </div>
 
             <div class="support-menu">
-                <h4>Any questions wrtite to
+                <h4>Any questions write to
                     <a href="mailto:support@night-software.cf">support@night-software.cf</a>
                 </h4>
             </div>
@@ -55,19 +54,13 @@
             <div class="title name-artists ">Name Artists</div>
         </div>
     </div>
-    <!-- <div class="groove-all ">
-        <div class="groove-current "></div>
-        <div class="handle ">
-            <div class="move-time "></div>
-        </div>
-    </div> -->
     <div class="content ">
         <div class="previous control "></div>
         <div class="pause control "></div>
         <div class="next control "></div>
         <div class="like control "></div>
     </div>
-    <script src="extension.js "></script>
+    <script src="js/extension.js "></script>
 </body>
 
 </html>
