--- a/popup.html
+++ b/popup.html
@@ -61,6 +61,8 @@
         <div class="like control "></div>
     </div>
     <script src="js/extension.js "></script>
+    <script src="js/translate.js"></script>
+
 </body>
 
 </html>
