--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <br>
                 </h6>
                 <h6>Any questions, please write to:
-                    <a href="mailto:support@night-software.cf">support@night-software.cf</a>
+                    <a href="mailto:nightsoftware@outlook.com">nightsoftware@outlook.com</a>
                 </h6>
             </div>
             <div class="buttons">
