improved load speed

--- a/popup.html
+++ b/popup.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Yandex Music</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/load.js"></script>
-    <!-- <script async src="js/popup.js"></script> -->
+    <script async src="js/load.js"></script>
+    <script async src="js/popup.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <div class="bar1 "></div>
-        <div class="bar2 "></div>
-        <div class="bar3 "></div>
+        <div class="bar1 transition"></div>
+        <div class="bar2 transition"></div>
+        <div class="bar3 transition"></div>
     </div>
     <div class="modal-side">
         <div class="content-menu slide-out">
@@ -107,11 +107,11 @@
         </div>
 
     </div>
-    <script src="js/extension.js "></script>
-    <script src="js/options.js "></script>
+    <script async src="js/extension.js "></script>
+    <script async src="js/options.js "></script>
 
     <!-- <script src="js/grove.js"></script> -->
-    <script src="js/translate.js"></script>
+    <script async src="js/translate.js"></script>
 
 </body>
 
