--- a/popup.html
+++ b/popup.html
@@ -65,11 +65,11 @@
     <div class="content-track ">
         <div class="cover"></div>
         <div class="modal ">
-            <img class="modal-cover scale-in-center"></img>
+            <img class="modal-cover"></img>
         </div>
         <div class="content-track-artist ">
-            <div class="title name-track ">Name Track</div>
-            <div class="title name-artists ">Name Artists</div>
+            <div class="title name-track ">Track</div>
+            <div class="title name-artists ">Artists</div>
         </div>
     </div>
     <!-- <div class="grove-box">
