--- a/popup.html
+++ b/popup.html
@@ -72,8 +72,14 @@
             <div class="title name-artists ">Artists</div>
         </div>
     </div>
-    <!-- <div class="grove-box">
+    <div class="grove-box">
         <div class="groove-content">
+            <div class="content-time">
+                <span class="current-time">0:0</span>
+                <span class="duration">0:0</span>
+
+            </div>
+
             <div class="groove-all ">
                 <div class="groove-current "></div>
                 <div class="handle ">
@@ -84,7 +90,7 @@
             </div>
         </div>
 
-    </div> -->
+    </div>
 
     <div class="content ">
         <div class="previous control "></div>
@@ -109,9 +115,9 @@
     </div>
     <script async src="js/extension.js "></script>
     <script async src="js/options.js "></script>
-
-    <!-- <script src="js/grove.js"></script> -->
     <script async src="js/translate.js"></script>
+    <script src="js/grove.js"></script>
+
 
 </body>
 
