--- a/popup.html
+++ b/popup.html
@@ -50,6 +50,7 @@
                     </div> -->
                     <div class="donationalerts-menu">
                         <span class="donationalerts-title">Donation Alerts</span>
+                        <div class="donationalerts-image"></div>
                     </div>
                 </div>
             </div>
