--- a/popup.html
+++ b/popup.html
@@ -88,6 +88,9 @@
                         <span id="Time">2:11</span>
                     </div>
                 </div>
+                <div class="move-time-current ">
+                    <span id="CurrentMoveTime">2:11</span>
+                </div>
             </div>
         </div>
 
@@ -111,6 +114,17 @@
             <button id="Yes" class="no-conect-btn">Yes</button>
             <button id="No" class="no-conect-btn">No</button>
             <button id="New" class="no-conect-btn">New Yandex Music Tab</button>
+        </div>
+
+    </div>
+    <div class="modal-news">
+        <div class="content-news">
+            <div>
+                <h2 id="Version">Version </h2>
+                <h2 class="versions">What's new?</h2>
+            </div>
+            <h2 id="whatNew" class="versions"></h2>
+            <button id="YesNews" class="yesNews yesNews-disable no-conect-btn">Yes</button>
         </div>
 
     </div>
