--- a/popup.html
+++ b/popup.html
@@ -83,11 +83,7 @@
 
             <div class="groove-all ">
                 <div class="groove-current "></div>
-                <div class="handle ">
-                    <div class="move-time ">
-                        <span id="Time">2:11</span>
-                    </div>
-                </div>
+                <div class="handle"></div>
                 <div class="move-time-current ">
                     <span id="CurrentMoveTime">2:11</span>
                 </div>
