--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li>Toggle a track.</li>
                     <li>Add or remove a track from your favorites.</li>
-                    <li>Use keyboard keys.</li>
+                    <li>Use keyboard shortcuts or media keys.</li>
                     <li>View and open a cover of any track.</li>
                     <li>You can use buttons of this extension or your keyboard.</li>
                     <li>When you use your keyboard to control, you can see a track's name in notifictions.</li>
