--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
     <title>Yandex Music</title>
     <link rel="stylesheet" href="style.css">
     <script async src="js/load.js"></script>
-    <script async src="js/popup.js"></script>
+    <script async src="js/gaq.js"></script>
 </head>
 
 <body>
@@ -16,6 +16,19 @@
         <div class="bar1 transition"></div>
         <div class="bar2 transition"></div>
         <div class="bar3 transition"></div>
+    </div>
+    <div class="hamburger-menu-list">
+        <div class="bar-list1 transition"></div>
+        <div class="bar-list2 transition"></div>
+        <div class="bar-list3 transition"></div>
+    </div>
+    <div id="listTrack" class="modal-list-menu">
+        <div class="content-list-menu">
+            <div class="list-track">
+                <div class="title-list">Title</div>
+            </div>
+        </div>
+        <!-- <div class="deceiver"></div> -->
     </div>
     <div class="modal-side">
         <div class="content-menu slide-out">
@@ -131,6 +144,7 @@
     <script async src="js/whatNew.js"></script>
     <script async src="js/options.js "></script>
     <script async src="js/translate.js"></script>
+    <script async src="js/tracksList.js"></script>
     <script src="js/grove.js"></script>
 
 
