no-connect-content

--- a/popup.html
+++ b/popup.html
@@ -122,19 +122,20 @@
         <div class="like control "></div>
     </div>
     <div class="no-connect">
-        <h2 id="AppDetected">App detected tab with "Yandex Music" but can't connect to the tab!</h2>
-        <div class="loader-container">
-            <div class="loader ">
-                <div class="loader2"></div>
+        <div class="no-connect-content">
+            <h2 id="AppDetected">App detected tab with "Yandex Music" but can't connect to the tab!</h2>
+            <div class="loader-container">
+                <div class="loader ">
+                    <div class="loader2"></div>
+                </div>
+            </div>
+            <h2 id="AppQuestion">Reload the tab or open new?</h2>
+            <div class="yes-no-new">
+                <button id="Yes" class="no-conect-btn">Yes</button>
+                <button id="No" class="no-conect-btn">No</button>
+                <button id="New" class="no-conect-btn">New Yandex Music Tab</button>
             </div>
         </div>
-        <h2 id="AppQuestion">Reload the tab or open new?</h2>
-        <div class="yes-no-new">
-            <button id="Yes" class="no-conect-btn">Yes</button>
-            <button id="No" class="no-conect-btn">No</button>
-            <button id="New" class="no-conect-btn">New Yandex Music Tab</button>
-        </div>
-
     </div>
     <div id="scroll-bar" class="modal-news">
         <div class="content-news">
