--- a/about.html
+++ b/about.html
@@ -13,7 +13,12 @@
     <div class="content-main">
         <div class="icon"></div>
         <h1 class="title-about title">Yandex Music Control</h1>
+
         <div class="content-about">
+            <div class="control-about">
+                <button class="button-about">About</button>
+                <button class="button-about button-what-new">What new?</button>
+            </div>
             <div class="about">App to control Yandex music from any tabs, windows or apps!
                 <br> To start using the extension, open a tab with Yandex music and enable your track.
                 <br> Do not close the tab! Enjoy!
@@ -41,6 +46,9 @@
                 <h6>Any questions, please write to:
                     <a href="mailto:nightsoftware@outlook.com">nightsoftware@outlook.com</a>
                 </h6>
+            </div>
+            <div class="about-what-new">
+                <div class="list-changes-coontent"></div>
             </div>
             <div class="buttons">
                 <div class="support pay-help">
