--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <span id="settings" class="title-span">Say thanks to the developer</span>
                     <div id="listSettings" class="list-settings">
                         <div class="setting-item">
+                            <!-- <span class="setting-name">Notifications</span> -->
                             <div class="content-label">
                                 <label id="allNotifications" for="checkboxAllNotifications">Notification every time a track is switched.</label>
                                 <input type="checkbox" id="checkboxAllNotifications">
