Preparing for version 3.03

--- a/extension/index.html
+++ b/extension/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Yandex Music</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script async src="js/theme.js"></script>
     <script async src="js/load.js"></script>
     <script async src="js/gaq.js"></script>
@@ -208,10 +208,10 @@
 
     </div>
     <script async src="js/extension.js "></script>
-    <script async src="js/whatNew.js"></script>
+    <script async src="js/what-new.js"></script>
     <script async src="js/options.js "></script>
     <script async src="js/translate.js"></script>
-    <script async src="js/tracksList.js"></script>
+    <script async src="js/playlist.js"></script>
     <script src="js/slider.js"></script>
 </body>
 
