--- a/extension/index.html
+++ b/extension/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
     <script async src="js/theme.js"></script>
     <script async src="js/load.js"></script>
-    <script async src="js/gaq.js"></script>
-</head>
+    <!-- <script async src="js/gaq.js"></script> -->
+    </head>
 
 <body>
     <div class="notification">
