--- a/extension/popup.html
+++ b/extension/popup.html
@@ -37,11 +37,13 @@
             <div class="toggle-volume control-toggle"> </div>
             <div class="slider-content">
                 <div class="slider">
-                    <div class="slider-helper"></div>
+                    <div class="handle-helper">
+                        <div class="slider-helper"></div>
+                        <div class="slider-handle"></div>    
+                    </div>
                     <div class="slider-groove slider-groove-volume">
                         <div class="slider-groove-current slider-groove-current-volume"></div>
                     </div>
-                    <div class="slider-handle"></div>
                 </div>
             </div>
         </div>
@@ -51,11 +53,13 @@
             <div class="slider-content slider-content-popup">
                 <span class="current-time">00:00</span>
                 <div class="slider  slider-progress slider-progress-popup">
-                    <div class="slider-helper"></div>
+                    <div class="handle-helper">
+                        <div class="slider-helper"></div>
+                        <div class="slider-handle progress-handle"></div>
+                    </div>
                     <div class="slider-groove slider-groove-progress">
                         <div class="slider-groove-current slider-groove-current-progress"></div>
                     </div>
-                    <div class="slider-handle progress-handle"></div>
                 </div>
                 <span class="duration">00:00</span>
             </div>
