--- a/extension/index.html
+++ b/extension/index.html
@@ -51,45 +51,59 @@
                             <!-- <span class="setting-name">Notifications</span> -->
                             <div class="content-label">
                                 <label id="allNotifications" for="checkboxAllNotifications">Notification every time a track is switched.</label>
-                                <input type="checkbox" id="checkboxAllNotifications">
+                                <input class="switcher" type="checkbox" id="checkboxAllNotifications">
                             </div>
                             <div class="content-reassign">
                                 <span class="subtitle" id="showNotify">Show notifications when control from keyboard: </span>
                                 <div class="content-label">
                                     <label id="playPauseNotify" for="n1">Notification when play / pause.</label>
-                                    <input type="checkbox" id="n1">
+                                    <input class="switcher" type="checkbox" id="n1">
                                 </div>
                                 <div class="content-label">
                                     <label id="prevNextNotify" for="n2">Notification when previous / next track.</label>
-                                    <input type="checkbox" id="n2">
+                                    <input class="switcher" type="checkbox" id="n2">
                                 </div>
                             </div>
                         </div>
                         <div class="setting-item">
-                            <div class="content-label">
-                                <label id="checkBoxDarkTheme" for="n3">Enable dark theme.</label>
-                                <input type="checkbox" id="n3">
+                            <div class="content-reassign">
+                                <span class="subtitle" id="SelectColorTheme">Select color theme:</span>
+                                <div>
+                                    <input class="switcher" type="radio" id="DefaultTheme" name="drone" value="DefaultTheme" checked>
+                                    <label for="DefaultTheme">Default</label>
+                                </div>
+                        
+                                <div>
+                                    <input class="switcher" type="radio" id="LightTheme" name="drone" value="LightTheme">
+                                    <label for="LightTheme">Light</label>
+                                </div>
+                        
+                                <div>
+                                    <input class="switcher" type="radio" id="DarkTheme" name="drone" value="DarkTheme">
+                                    <label for="DarkTheme">Dark</label>
+                                </div>
                             </div>
+
                             <div class="content-label">
                                 <label id="checkBoxIncreaseCover" for="n4">Reduce the control buttons and increase the cover.</label>
-                                <input type="checkbox" id="n4">
+                                <input class="switcher" type="checkbox" id="n4">
                             </div>
                             <div class="content-label">
                                 <label id="checkBoxDislikeButton" for="n5">Add a dislike button?</label>
-                                <input type="checkbox" id="n5">
+                                <input class="switcher" type="checkbox" id="n5">
                             </div>
                         </div>
                         <div class="setting-item">
                             <div class="content-label">
                                 <label id="checkBoxSavePos" for="n6">Save the position and size of the popup.</label>
-                                <input type="checkbox" id="n6">
+                                <input class="switcher" type="checkbox" id="n6">
                             </div>
                             <div class="content-reassign">
                                 <span class="subtitle" id="shortcutKeyOpenPopup">Select a shortcut key to open and activate the popup. (shortcut key will be reassigned)</span>
                                 <div class="container-reassign">
                                     <div class="content-label">
                                         <label id="checkBoxReassign" for="n7">The next shortcut key will be reassign -</label>
-                                        <input type="checkbox" id="n7">
+                                        <input class="switcher" type="checkbox" id="n7">
                                     </div>
                                     <div class="select-shortcut-key">Choose from the list below.</div>
                                 </div>
@@ -149,11 +163,13 @@
                         <div class="toggle-volume control-toggle"> </div>
                         <div class="slider-content">
                             <div class="slider">
-                                <div class="slider-helper"></div>
+                                <div class="handle-helper">
+                                    <div class="slider-helper"></div>
+                                    <div class="slider-handle"></div>    
+                                </div>
                                 <div class="slider-groove slider-groove-volume">
                                     <div class="slider-groove-current slider-groove-current-volume"></div>
                                 </div>
-                                <div class="slider-handle"></div>
                             </div>
                         </div>
                     </div>
@@ -162,11 +178,13 @@
             </div>
             <div class="slider-content">
                 <div class="slider  slider-progress">
-                    <div class="slider-helper"></div>
+                    <div class="handle-helper">
+                        <div class="slider-helper"></div>
+                        <div class="slider-handle progress-handle"></div>
+                    </div>
                     <div class="slider-groove slider-groove-progress">
                         <div class="slider-groove-current slider-groove-current-progress"></div>
                     </div>
-                    <div class="slider-handle progress-handle"></div>
                 </div>
             </div>
         </div>
